# dictwrapper

./: .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
dictwrapper/: __init__.py  classwrapper.py  classwrapperauto.py  dictwrapper.py  dictwrapperaccess.py  visitor.py
multikeydict/: __init__.py  classwrapper.py  flatmkdict.py  flatten.py  map.py  match.py  nestedmkdict.py  nestedmkdictaccess.py  typing.py  visitor.py
multikeydict/tools/: __init__.py  filter.py  flatten.py  map.py  match.py  reorder_key.py
nestedmapping/: __init__.py  class_wrapper.py  ipython.py  nested_mapping_access.py  typing.py  visitor.py
nestedmapping/tools/: filter.py  map.py  match.py
src/nestedmapping/: nested_mapping.py
src/nestedmapping/tools/: __init__.py  reorder_key.py
storage/: storage.py
test/: test_dictwrapper.py  test_dictwrapper_storage.py  test_dictwrapper_update.py  test_flatmkdict.py  test_map.py  test_match.py  test_nestedmkdict.py  test_nestedmkdict_flatmkdict.py  test_nestedmkdict_flatten.py  test_nestedmkdict_update.py  test_storage.py  test_visitor.py
tests/: test_dictwrapper.py  test_filter.py  test_flatmkdict.py  test_map.py  test_match.py  test_nested_mapping.py  test_nested_mapping_update.py  test_nestedmkdict.py  test_nestedmkdict_flatmkdict.py  test_nestedmkdict_update.py  test_visitor.py
