[project]
name = "nestedmapping"
version = "0.9.0"
description = "The package to work with nested dictionaries supporing list/set as keys"
authors = [
    {name = "Gonchar Maxim", email = "gonchar@jinr.ru"},
    {name = "Vitalii Zavadskyi", email= "zavadskiy.vs@phystech.edu"},
    {name = "Tsegelnik Nikita", email = "tsegelnik@jinr.ru"},
]
maintainers = [
    {name = "Gonchar Maxim", email = "gonchar@jinr.ru"},
    {name = "Vitalii Zavadskyi", email= "zavadskiy.vs@phystech.edu"},
    {name = "Tsegelnik Nikita", email = "tsegelnik@jinr.ru"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy", "ordered-set"]

[project.urls]
homepage = "https://github.com/dagflow-team/nestedmapping"
repository = "https://github.com/dagflow-team/nestedmapping"
documentation = "https://github.com/dagflow-team/nestedmapping/wiki"
"Bug Tracker" = "https://github.com/dagflow-team/nestedmapping/issues"

[project.optional-dependencies]
dev = [ "pytest", "pytest-cov", "coverage"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["nestedmapping"]
